<?xml version="1.0"?>
<package format="2">
  <name>cpr_office_extension_gazebo</name>
  <version>1.0.0</version>
  <description>The cpr_office_extension_gazebo package</description>

    <maintainer email="claxtono@qut.edu.au">Owen Claxton</maintainer>
    <author email="claxtono@qut.edu.au">Owen Claxton</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>gazebo_ros</exec_depend>

    <export>
    </export>
  </package>
